Changes in MySongs video working

--- a/app/src/main/res/layout-v26/activity_song.xml
+++ b/app/src/main/res/layout-v26/activity_song.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login"
     tools:context=".SongActivity">
 
     <include
@@ -13,7 +14,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/song_message"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:visibility="invisible"
+        android:text="@string/you_need_to_belong_to_a_band"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/song_toolbar" />
+
     <RelativeLayout
+        android:id="@+id/song_layout_RL"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -21,6 +37,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +49,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints=""
+            android:padding="10dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/inputs"
             android:ems="10"
             android:hint="@string/enter_name_of_the_song"
             android:inputType="textPersonName"
@@ -41,8 +61,11 @@
             android:id="@+id/song_artist_band_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/inputs"
+            android:layout_margin="10dp"
             android:layout_below="@+id/song_song_name_ET"
             android:autofillHints=""
+            android:padding="10dp"
             android:ems="10"
             android:hint="@string/enter_name_of_the_artist_or_band"
             android:inputType="textPersonName" />
@@ -51,17 +74,21 @@
             android:id="@+id/song_youtube_title_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/inputs"
+            android:layout_margin="10dp"
+            android:padding="10dp"
             android:layout_below="@+id/song_youtube_link_ET"
             android:ems="10"
             android:hint="@string/youtube_title"
             android:importantForAutofill="no"
-            android:inputType="textPersonName" />
+            android:inputType="textImeMultiLine" />
 
         <Button
             android:id="@+id/song_search_song_youtube_BT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/buttons"
+            android:layout_margin="10dp"
             android:text="@string/search_song_youtube"
             android:textColor="@color/white"
             android:textStyle="bold"
@@ -70,8 +97,10 @@
         <EditText
             android:id="@+id/song_youtube_link_ET"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:autofillHints=""
+            android:padding="10dp"
+            android:visibility="invisible"
             android:enabled="false"
             android:hint="@string/youtube_link"
             android:inputType="textPersonName"
@@ -81,22 +110,15 @@
             android:id="@+id/song_add_song_BT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_below="@+id/song_youtube_title_ET"
             android:background="@drawable/buttons"
             android:text="@string/add_song"
             android:textColor="@color/white"
             android:textStyle="bold" />
 
-        <ListView
-            android:id="@+id/songs_LV"
-            android:layout_below="@+id/song_add_song_BT"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" />
 
     </RelativeLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
