--- a/app/src/main/res/layout-v26/activity_song_update.xml
+++ b/app/src/main/res/layout-v26/activity_song_update.xml
@@ -91,7 +91,7 @@
             android:hint="@string/youtube_link"
             android:inputType="textPersonName"
             android:padding="10dp"
-            android:visibility="invisible" tools:targetApi="o" />
+            android:visibility="invisible" />
 
         <Button
             android:id="@+id/update_song_update_song_BT"
