--- a/app/src/main/res/layout/activity_my_playlists.xml
+++ b/app/src/main/res/layout/activity_my_playlists.xml
@@ -48,16 +48,12 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/my_playlists_recyclerView_RV"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/my_playlists_add_BT"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/my_playlists_toolbar" />
+                android:layout_marginBottom="8dp" />
 
             <Button
                 android:id="@+id/my_playlists_add_BT"
