--- a/app/src/main/res/layout/activity_add_songs_to_playlist.xml
+++ b/app/src/main/res/layout/activity_add_songs_to_playlist.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyPlaylistsActivity">
+    tools:context=".AddSongsToPlaylistActivity">
 
     <include
-        android:id="@+id/my_playlists_toolbar"
+        android:id="@+id/my_songs_playlists_toolbar"
         layout="@layout/app_bar_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/my_playlists_message"
+        android:id="@+id/my_songs_playlists_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -25,21 +25,20 @@
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_playlists_toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/my_songs_playlists_toolbar" />
 
     <ScrollView
-        android:id="@+id/my_playlists_scrollView_SV"
+        android:id="@+id/my_songs_playlists_scrollView_SV"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_playlists_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/my_songs_playlists_toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +46,7 @@
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/my_playlists_recyclerView_RV"
+                android:id="@+id/my_songs_playlists_recyclerView_RV"
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
                 android:layout_marginStart="8dp"
@@ -56,14 +55,14 @@
                 android:layout_marginBottom="8dp" />
 
             <Button
-                android:id="@+id/my_playlists_add_BT"
+                android:id="@+id/my_songs_playlists_add_BT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:background="@drawable/buttons"
-                android:text="@string/create_playlist"
+                android:text="@string/add_song_to_playlist"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
