MyPlaylist select songs

--- a/app/src/main/res/layout-v26/all_songs_playlist_layout.xml
+++ b/app/src/main/res/layout-v26/all_songs_playlist_layout.xml
@@ -39,23 +39,9 @@
             android:id="@+id/all_songs_playlist_youtube_link_TV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"/>
+            android:visibility="visible"/>
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/all_songs_playlist_play_IV"
-        android:layout_width="0dp"
-        android:visibility="invisible"
-        android:layout_weight="1"
-        android:layout_height="40dp"
-        android:src="@drawable/ic_play"/>
-
-        <ImageView
-            android:id="@+id/all_songs_playlist_delete_IV"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:src="@drawable/ic_delete"/>
 
 
 </LinearLayout>
