--- a/app/src/main/res/layout/song_layout.xml
+++ b/app/src/main/res/layout/song_layout.xml
@@ -20,39 +20,34 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/add_song"
+                android:textSize="12sp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/artistNameTV"
                 android:layout_width="match_parent"
+                android:textSize="12sp"
                 android:layout_height="wrap_content"
                 android:text="@string/musicians"
-                android:textStyle="bold" />
+                android:textStyle="normal" />
 
             <TextView
-                android:id="@+id/youtubeTitleTV"
+                android:id="@+id/youtubeUrlTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/youtube_title" />
+                android:textSize="10sp"/>
         </LinearLayout>
 
 
         <TextView
             android:id="@+id/youtubeTV"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="3"
             android:visibility="invisible"
             android:text="" />
-
-        <ImageButton
-            android:id="@+id/youtubePlayIB"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:visibility="invisible"
-            android:src="@drawable/ic_play"/>
 
 
     </LinearLayout>
