--- a/app/src/main/res/layout-v26/all_songs_playlist_layout.xml
+++ b/app/src/main/res/layout-v26/all_songs_playlist_layout.xml
@@ -37,9 +37,31 @@
             android:layout_height="wrap_content"/>
         <TextView
             android:id="@+id/all_songs_playlist_youtube_link_TV"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="visible"/>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:visibility="invisible"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/all_songs_playlist_play_IV"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:visibility="invisible"
+            android:contentDescription="@string/play_song"
+            android:src="@drawable/ic_play"/>
+        <ImageView
+            android:id="@+id/all_songs_playlist_delete_IV"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:contentDescription="@string/delete_song"
+            android:src="@drawable/ic_delete"/>
+
 
     </LinearLayout>
 
