--- a/app/src/main/res/layout/activity_create_event.xml
+++ b/app/src/main/res/layout/activity_create_event.xml
@@ -135,7 +135,7 @@
             android:layout_marginTop="6dp"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:visibility="invisible"
+            android:visibility="visible"
             android:background="@drawable/buttons"
             android:layout_below="@id/create_event_playlist_ET"/>
 
