--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,4 +39,9 @@
 
     </com.google.android.material.navigation.NavigationView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_events_RV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </androidx.drawerlayout.widget.DrawerLayout>
