--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/widget_item_event_TV"
-        android:layout_width="match_parent"
-        android:textStyle="bold"
-        android:text="@string/events"
-        android:layout_height="wrap_content"/>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_item_event_TV"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/events"
+    android:textStyle="bold" />
 
-</LinearLayout>
