--- a/app/src/main/res/layout/item_event_widget.xml
+++ b/app/src/main/res/layout/item_event_widget.xml
@@ -2,9 +2,11 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/widget_listView_LV"
+    <TextView
+        android:id="@+id/widget_item_event_TV"
         android:layout_width="match_parent"
+        android:textStyle="bold"
+        android:text="@string/events"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
