--- a/app/src/main/res/layout-v26/activity_login.xml
+++ b/app/src/main/res/layout-v26/activity_login.xml
@@ -121,38 +121,28 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
 
         app:layout_constraintTop_toTopOf="@+id/login_or_login_with_TV">
 
         <ImageView
-            android:id="@+id/login_facebook_IV"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@string/facebook_login"
-            android:src="@drawable/facebook" />
-
-        <ImageView
-            android:id="@+id/login_twitter_IV"
-            android:layout_width="100dp"
-            android:layout_height="90dp"
-            android:contentDescription="@string/twitter_login"
-            android:src="@drawable/twitter" />
-
-        <ImageView
             android:id="@+id/login_google_IV"
+            android:layout_marginTop="12dp"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_marginTop="12dp"
             android:layout_marginEnd="10dp"
-            android:contentDescription="@string/google_login"
-            android:src="@drawable/google" />
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/google"
+            android:contentDescription="TODO" />
 
-
+        <com.facebook.login.widget.LoginButton
+            android:id="@+id/login_facebook_BT"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp" />
 
 
     </LinearLayout>
