--- a/app/src/main/res/layout/activity_my_playlists.xml
+++ b/app/src/main/res/layout/activity_my_playlists.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/instrumentsvoice"
     tools:context=".MyPlaylistsActivity">
 
     <include
@@ -22,6 +23,7 @@
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:background="@color/white"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
