--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/instrumentsvoice"
     tools:context=".PlaylistActivity">
 
     <include
@@ -15,6 +16,7 @@
     <TextView
         android:id="@+id/playlist_message"
         android:layout_width="wrap_content"
+        android:background="@color/white"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:textStyle="bold"
