--- a/app/src/main/res/layout/activity_video_update_detail.xml
+++ b/app/src/main/res/layout/activity_video_update_detail.xml
@@ -9,6 +9,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/instrumentsvoice"
         android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
@@ -36,6 +37,8 @@
         android:id="@+id/update_youtube_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:layout_margin="10dp"
         android:text="@string/textview"
         android:textSize="20sp" />
@@ -47,6 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
+        android:textColor="@color/white"
         android:text="@string/textview"
         android:textSize="18sp"
         android:textStyle="bold" />
@@ -59,6 +63,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
+        android:background="@color/white"
         android:justificationMode="inter_word" />
 
     <Button
