--- a/app/src/main/res/layout-v26/activity_playlist.xml
+++ b/app/src/main/res/layout-v26/activity_playlist.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/instrumentsvoice"
     tools:context=".PlaylistActivity">
 
     <include
@@ -16,6 +17,7 @@
         android:id="@+id/playlist_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:layout_marginTop="32dp"
         android:textStyle="bold"
         android:textColor="@color/black"
