--- a/app/src/main/res/layout/activity_my_songs.xml
+++ b/app/src/main/res/layout/activity_my_songs.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/instrumentsvoice"
     android:layout_height="match_parent"
     tools:context=".MySongsActivity">
 
@@ -30,6 +31,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
             android:text="@string/search_for_songs"
             android:textStyle="bold" />
 
@@ -39,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10sp"
+            android:textColor="@color/white"
             android:text="@string/songs"
             android:textSize="20sp"
             android:textStyle="bold" />
