--- a/app/src/main/res/layout/activity_search_youtube_update.xml
+++ b/app/src/main/res/layout/activity_search_youtube_update.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/instrumentsvoice"
     tools:context=".SearchYoutubeUpdateActivity">
 
     <androidx.appcompat.widget.Toolbar
