--- a/app/src/main/res/layout/activity_video_detail.xml
+++ b/app/src/main/res/layout/activity_video_detail.xml
@@ -10,6 +10,7 @@
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginBottom="8dp"
+    android:background="@drawable/instrumentsvoice"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
@@ -23,6 +24,7 @@
             style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:text="@string/app_name"
             android:textColor="@color/white" />
     </androidx.appcompat.widget.Toolbar>
@@ -36,6 +38,8 @@
         android:id="@+id/youtube_detail_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textColor="@color/white"
         android:layout_margin="10dp"
         android:text="@string/textview"
         android:textSize="20sp" />
@@ -45,6 +49,7 @@
         android:id="@+id/youtube_detail_channel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:text="@string/textview"
@@ -58,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
+        android:background="@color/white"
         android:layout_marginRight="10dp"
         android:justificationMode="inter_word" />
 
