--- a/app/src/main/res/layout/all_events_layout.xml
+++ b/app/src/main/res/layout/all_events_layout.xml
@@ -1,30 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView
+    android:id="@+id/all_events_cardView_CV"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content"
+    android:elevation="5dp"
+    android:layout_margin="2dp"
+    android:layout_width="match_parent">
+
+<LinearLayout
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="10dp">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <TextView
         android:id="@+id/all_events_type_TV"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:text="@string/event_type"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/all_events_name_TV"
-        android:layout_width="match_parent"
+        android:layout_width="9dp"
+        android:layout_weight="3"
         android:text="@string/enter_a_name_for_your_event"
         android:textStyle="bold"
         android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/all_events_place_TV"
-        android:layout_width="match_parent"
-        android:text="@string/enter_a_place"
-        android:layout_height="wrap_content"/>
-
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <ImageView
+            android:contentDescription="@string/location"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_country"/>
+    <TextView
+        android:id="@+id/all_events_place_TV"
+        android:layout_width="0dp"
+        android:layout_weight="3"
+        android:text="@string/enter_a_place"
+        android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/all_events_date_TV"
             android:layout_width="0dp"
@@ -34,7 +57,7 @@
         <TextView
             android:id="@+id/all_events_time_TV"
             android:layout_width="0dp"
-            android:text="@string/enter_event_time"
+            android:text="12:00"
             android:layout_height="wrap_content"
             android:layout_weight="1"/>
     </LinearLayout>
@@ -42,7 +65,8 @@
         android:id="@+id/all_events_playlist_TV"
         android:layout_width="match_parent"
         android:text="@string/playlists"
+        android:textStyle="bold"
         android:layout_height="wrap_content"/>
-
-
 </LinearLayout>
+
+</androidx.cardview.widget.CardView>
