--- a/app/src/main/res/layout/playlist_layout.xml
+++ b/app/src/main/res/layout/playlist_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="10dp">
 
@@ -19,6 +19,7 @@
                 android:layout_width="match_parent"
                 android:textSize="12sp"
                 android:layout_height="wrap_content"
+                android:visibility="invisible"
                 android:text="@string/musicians"
                 android:textStyle="normal" />
 </LinearLayout>
